--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "pusher/pusher-php-server": "~3.0",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^4.0",
         "spatie/laravel-query-builder": "^3.5",
         "tymon/jwt-auth": "^1.0"
